--- a/index.html
+++ b/index.html
@@ -21,22 +21,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     
 <body>
-    <div class="titulo">
-    <h1>Feliz dia dos Namorados!</h1>
-    </div> 
-    
-    <div class="countup" id="countup1">
-        <span class="timeel years">00</span>
-        <span class="timeel timeRefYears">Ano</span>
-        <span class="timeel days">00</span>
-        <span class="timeel timeRefDays">Dias</span>
-        <span class="timeel hours">00</span>
-        <span class="timeel timeRefHours">Horas</span>
-        <span class="timeel minutes">00</span>
-        <span class="timeel timeRefMinutes">Minutos</span>
-        <span class="timeel seconds">00</span>
-        <span class="timeel timeRefSeconds">Segundos</span>
-    </div>
 <main>
 <div class="container-fluid">
             <!--Slider-->
@@ -96,7 +80,43 @@
                 <span class="visually-hidden">Próximo</span>
             </button>
             </div>
+</div>
+<div class="container-fluid">
+        <div class="countup" id="countup1">
+        <span class="timeel years">00</span>
+        <span class="timeel timeRefYears">Ano</span>
+        <span class="timeel days">00</span>
+        <span class="timeel timeRefDays">Dias</span>
+        <span class="timeel hours">00</span>
+        <span class="timeel timeRefHours">Horas</span>
+        <span class="timeel minutes">00</span>
+        <span class="timeel timeRefMinutes">Minutos</span>
+        <span class="timeel seconds">00</span>
+        <span class="timeel timeRefSeconds">Segundos</span>
+        </div>
+</div>
+    <div class="titulo">
+    <h1>Feliz dia dos Namorados, <br> Eu te Amo</h1>
 </main>
+    <div div class = "audio">
+    <audio id="bgAudio" src="assets/luther.mp3" preload="auto"></audio>
+    </div>
+    <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const audio = document.getElementById("bgAudio");
 
+        function iniciarAudio() {
+            audio.play().then(() => {
+                console.log("Áudio iniciado com sucesso.");
+            }).catch((err) => {
+                console.log("Erro ao iniciar o áudio:", err);
+            });
+
+            document.removeEventListener("click", iniciarAudio);
+        }
+
+        document.addEventListener("click", iniciarAudio);
+    });
+</script> 
 </body>
 </html>
